--- a/deploy/chart/templates/redis.yaml
+++ b/deploy/chart/templates/redis.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: mysql
+    app: redis
   name: redis
   namespace: ioc-shopping-system
 spec:
